Menambahkan Gambar pada My Skills dan sedikit merubah responsive pada button dalam form contact

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>My Portfolio</title>
+    <title>Ahmad Sidik Rudini</title>
     <link rel="icon" href="img/icon.png">
 
     <!-- Bootstrap -->
@@ -166,20 +166,20 @@
           </div>
           <div class="col-sm-4">
             <h4 class="text-center">Computer Assembly and Repair</h4>
-            <a data-lightbox="portfolio" data-title="Website Invitation" href="img/portfolio/1.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/portfolio/1.jpg" alt="Portfolio 1">
+            <a data-lightbox="portfolio" data-title="Website Invitation" href="img/portfolio/computer_assembly.jpg" class="thumbnail">
+              <img class="img-responsive" src="img/portfolio/computer_assembly.jpeg" alt="Computer Assembly and Repair">
             </a>
           </div>
           <div class="col-sm-4">
-            <h4 class="text-center">Networking Design and Development</h4>
-            <a data-lightbox="portfolio" data-title="Company Profile" href="img/portfolio/2.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/portfolio/2.jpg" alt="Portfolio 2">
+            <h4 class="text-center">Networking Design and Deployment</h4>
+            <a data-lightbox="portfolio" data-title="Company Profile" href="img/portfolio/networking.jpg" class="thumbnail">
+              <img class="img-responsive" src="img/portfolio/networking.jpg" alt="Networking Design and Deployment">
             </a>
           </div>
           <div class="col-sm-4">
             <h4 class="text-center">Web Programming (On The Learning Stage)</h4>
-            <a data-lightbox="portfolio" data-title="Web-Based Apps" href="img/portfolio/3.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/portfolio/3.jpg" alt="Portfolio 3">
+            <a data-lightbox="portfolio" data-title="Web-Based Apps" href="img/portfolio/programming.jpg" class="thumbnail">
+              <img class="img-responsive" src="img/portfolio/programming.jpg" alt="Web Programming (On The Learning Stage)">
             </a>
           </div>
         </div>
@@ -206,19 +206,19 @@
           <div class="col-sm-4">
             <h4 class="text-center">IT Support at PT Nutrifood Indonesia (Industrial Work Practice)</h4>
             <a data-lightbox="portfolio" data-title="Website Invitation" href="img/portfolio/1.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/portfolio/1.jpg" alt="Portfolio 1">
+              <img class="img-responsive" src="img/portfolio/1.jpg" alt="IT Support at PT Nutrifood Indonesia (Industrial Work Practice)">
             </a>
           </div>
           <div class="col-sm-4">
             <h4 class="text-center">IT Support at PT Teratai Widjaja</h4><br>
             <a data-lightbox="portfolio" data-title="Company Profile" href="img/portfolio/2.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/portfolio/2.jpg" alt="Portfolio 2">
+              <img class="img-responsive" src="img/portfolio/2.jpg" alt="IT Support at PT Teratai Widjaja">
             </a>
           </div>
           <div class="col-sm-4">
             <h4 class="text-center">Computer and Network Engineering Teacher at SMK Informatika Bina Generasi 1 & 3</h4>
             <a data-lightbox="portfolio" data-title="Web-Based Apps" href="img/portfolio/3.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/portfolio/3.jpg" alt="Portfolio 3">
+              <img class="img-responsive" src="img/portfolio/3.jpg" alt="Computer and Network Engineering Teacher at SMK Informatika Bina Generasi 1 & 3">
             </a>
           </div>
         </div>
@@ -266,8 +266,10 @@
                 <label for="pesan">Pesan</label>
                 <textarea name="pesan" id="pesan" class="form-control" rows="10" placeholder="Masukkan Pesan"></textarea>
               </div>
-              <button type="submit" name="simpan" class="btn btn-primary">Kirim Pesan</button>
-              <button type="reset" class="btn btn-warning">Reset</button>
+              <div class="tombol">
+                <button type="submit" name="simpan" class="btn btn-primary">Kirim Pesan</button>
+                <button type="reset" class="btn btn-warning">Reset</button>
+              </div>
             </form>
           </div>
         </div>
