Menambahkan gambar pada My Experience

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </section>
     <!-- Akhir Skills -->
 
-    <!-- Skills -->
+    <!-- Experience -->
     <section class="portfolio" id="portfolio">
       <div class="container">
         <div class="row">
@@ -205,27 +205,27 @@
           </div>
           <div class="col-sm-4">
             <h4 class="text-center">IT Support at PT Nutrifood Indonesia (Industrial Work Practice)</h4>
-            <a data-lightbox="portfolio" data-title="Website Invitation" href="img/portfolio/1.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/portfolio/1.jpg" alt="IT Support at PT Nutrifood Indonesia (Industrial Work Practice)">
+            <a data-lightbox="portfolio" data-title="Website Invitation" href="img/portfolio/nutrifood.jpg" class="thumbnail">
+              <img class="img-responsive" src="img/portfolio/nutrifood.jpg" alt="IT Support at PT Nutrifood Indonesia (Industrial Work Practice)">
             </a>
           </div>
           <div class="col-sm-4">
             <h4 class="text-center">IT Support at PT Teratai Widjaja</h4><br>
-            <a data-lightbox="portfolio" data-title="Company Profile" href="img/portfolio/2.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/portfolio/2.jpg" alt="IT Support at PT Teratai Widjaja">
+            <a data-lightbox="portfolio" data-title="Company Profile" href="img/portfolio/tw.jpg" class="thumbnail">
+              <img class="img-responsive" src="img/portfolio/tw.jpg" alt="IT Support at PT Teratai Widjaja">
             </a>
           </div>
           <div class="col-sm-4">
             <h4 class="text-center">Computer and Network Engineering Teacher at SMK Informatika Bina Generasi 1 & 3</h4>
-            <a data-lightbox="portfolio" data-title="Web-Based Apps" href="img/portfolio/3.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/portfolio/3.jpg" alt="Computer and Network Engineering Teacher at SMK Informatika Bina Generasi 1 & 3">
+            <a data-lightbox="portfolio" data-title="Web-Based Apps" href="img/portfolio/ibg.jpg" class="thumbnail">
+              <img class="img-responsive" src="img/portfolio/ibg.jpg" alt="Computer and Network Engineering Teacher at SMK Informatika Bina Generasi 1 & 3">
             </a>
           </div>
         </div>
         <br>
       </div>
     </section>
-    <!-- Akhir Skills -->
+    <!-- Akhir Experience -->
 
 
     <!-- Kontak -->
