--- a/index.html
+++ b/index.html
@@ -104,18 +104,51 @@
           </div>
         </div>  
           <div class="col-sm-12">
-            <h4>Computer Assembly and Repair</h4>
+            <h4>Computer Assembly</h4>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                90%
+              <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100" style="width: 98%;">
+                98%
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <h4>Computer Repair</h4>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="93" aria-valuemin="0" aria-valuemax="100" style="width: 93%;">
+                93%
               </div>
             </div>
           </div>
 
           <div class="col-sm-12">
-            <h4>Networking Design and Deployment</h4>
+            <h4>Network Design</h4>
             <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+              <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+                85%
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <h4>Network LAN Cabling</h4>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100" style="width: 91%;">
+                91%
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <h4>Access Point Configuration</h4>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                90%
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <h4>Mikrotik Configuration</h4>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
                 85%
               </div>
             </div>
@@ -124,7 +157,7 @@
           <div class="col-sm-12">
             <h4>HTML</h4>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+              <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                 90%
               </div>
             </div>
@@ -133,7 +166,7 @@
           <div class="col-sm-12">
             <h4>CSS</h4>
             <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%;">
+              <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%;">
                 45%
               </div>
             </div>
@@ -142,7 +175,7 @@
           <div class="col-sm-12">
             <h4>JavaScript</h4>
             <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+              <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                 50%
               </div>
             </div>
@@ -150,49 +183,24 @@
           <div class="col-sm-12">
             <h4>PHP</h4>
             <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+              <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                 70%
               </div>
             </div>
           </div>
+          <div class="col-sm-12">
+            <h4>Database (MySQL & SQL Server)</h4>
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                80%
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
     <!-- Akhir Skills -->
-
-    <!-- Experience -->
-    <!-- <section class="experience" id="experience">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h2 class="text-center">My Experience</h2>
-            <hr>
-          </div>
-        </div>
-          <div class="col-sm-4">
-            <h4 class="text-center">IT Support at PT Nutrifood Indonesia (Industrial Work Practice)</h4>
-            <a data-lightbox="experience data-title="Website Invitation" href="img/experience/nutrifood.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/experience/nutrifood.jpg" alt="IT Support at PT Nutrifood Indonesia (Industrial Work Practice)">
-            </a>
-          </div>
-          <div class="col-sm-4">
-            <h4 class="text-center">IT Support at PT Teratai Widjaja</h4><br>
-            <a data-lightbox="experience data-title="Company Profile" href="img/experience/tw.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/experience/tw.jpg" alt="IT Support at PT Teratai Widjaja">
-            </a>
-          </div>
-          <div class="col-sm-4">
-            <h4 class="text-center">Computer and Network Engineering Teacher at SMK Informatika Bina Generasi 1 & 3</h4>
-            <a data-lightbox="experience data-title="Web-Based Apps" href="img/experience/ibg.jpg" class="thumbnail">
-              <img class="img-responsive" src="img/experience/ibg.jpg" alt="Computer and Network Engineering Teacher at SMK Informatika Bina Generasi 1 & 3">
-            </a>
-          </div>
-        </div>
-        <br>
-      </div>
-    </section> -->
-    <!-- Akhir Experience -->
-
 
     <!-- Kontak -->
     <section class="contact" id="contact">
@@ -203,30 +211,52 @@
             <hr>
           </div>
           
-          <div class="col-md-7">
-            <h3>My Contact Details</h3>
-            <ul class="list-inline">
-              <li><span>Address:</span>AA</li>
-              <li><span>Address:</span>AA</li>
-              <li><span>Address:</span>AA</li>
-              <li><span>Address:</span>AA</li>
-            </ul>
+          <div class="col-sm-6">
+            <h3>Get In Touch</h3>
+            <form action="proses_input_kotaksaran.php" method="POST">
+              <div class="form-group">
+                <label for="nama">Nama</label>
+                <input type="text" name="nama" id="nama" class="form-control" placeholder="Masukkan Nama">
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" class="form-control" placeholder="Masukkan Email">
+              </div>
+              <div class="form-group">
+                <label for="telp">No. Telepon</label>
+                <input type="tel" name="telp" id="telp" class="form-control" placeholder="Masukkan No. Telepon">
+              </div>
+              <!-- <div class="form-group">
+                <label for="kategori">Kritik, Saran, Pertanyaan</label>
+                <select name="kategori" id="kategori" class="form-control">
+                  <option value="">-- Pilih Kategori --</option>
+                  <option value="Saran">Saran</option>
+                  <option value="Kritik">Kritik</option>
+                  <option value="Tanya">Tanya</option>
+                </select>
+              </div> -->
+              <div class="form-group">
+                <label for="pesan">Pesan</label>
+                <textarea name="pesan" id="pesan" class="form-control" rows="5" placeholder="Masukkan Pesan"></textarea>
+              </div>
+              <button type="submit" name="simpan" class="btn btn-primary">Send Message</button>
+              <button type="reset" class="btn btn-warning">Reset</button>
+            </form>
           </div>
 
-          <div class="col-md-5">
+          <div class="col-sm-4 col-sm-offset-2">
             <h3>My Contact Details</h3>
-            <ul class="list-inline">
-              <li><span>Address:</span>AA</li>
-              <li><span>Address:</span>AA</li>
-              <li><span>Address:</span>AA</li>
-              <li><span>Address:</span>AA</li>
-            </ul>
-          </div>
+            <br>
+            <h4><b>Address :</b></h4>
+              <h5>Jl. Jabaru 3 No.70 Pasir Kuda, Bogor Barat, Kota Bogor</h5>
+            <br>
+            <h4><b>Email :</b></h4>
+              <h5>sidikrudini16@gmail.com</h5>
+            <br>  
+            <h4><b>Phone number :</b></h4>
+              <h5>087711356758</h5>
 
-          <div class="col-sm-12 text-center">
-            <a href="https://wa.me/087711356758" target="blank" class="btn btn-success"><i class="glyphicon glyphicon-envelope"></i> Chat via WhatsApp</a>
-            <a href="https://t.me/asidikrdn" target="blank" class="btn btn-primary"><i class="glyphicon glyphicon-envelope"></i> Chat via Telegram</a>
-          </div>
+          
         </div>
       </div>
     </section>
@@ -239,6 +269,10 @@
         <div class="row">
           <div class="col-sm-12">
             <p>&copy; Copyright 2022 | Built by <a href="http://instagram.com/asidikrdn" target="blank"><i class="glyphicon glyphicon-user"></i> Ahmad Sidik Rudini</a></p>
+          </div>
+          <div class="col-sm-12 text-center">
+            <a href="https://wa.me/087711356758" target="blank" class="btn btn-success"><i class="glyphicon glyphicon-envelope"></i> WhatsApp</a>
+            <a href="https://t.me/asidikrdn" target="blank" class="btn btn-primary"><i class="glyphicon glyphicon-envelope"></i> Telegram</a>
           </div>
         </div>
       </div>
