Menambahkan gambar pada section about

--- a/index.html
+++ b/index.html
@@ -76,15 +76,20 @@
         </div>
 
         <div class="row">
-          <div class="col-sm-5 col-sm-offset-1"> <!-- ofset digunakan untuk mengisi kolom sebelumnya dengan isian kosong-->
+          <div class="col-sm-4"> 
+            <img src="img/me.png" class="img-responsive img-about" alt="Responsive image">
+          </div>
+          <div class="col-sm-4">  <!-- ofset digunakan untuk mengisi kolom sebelumnya dengan isian kosong -->
             <p class="pKiri">
               Perkenalkan, saya Ahmad Sidik Rudini. Saya seorang mahasiswa Teknik Informatika di salah satu perguruan tinggi swasta di Kota Bogor dengan fokus kompetensi rekayasa perangkat lunak (RPL).
               Kegiatan saya sehari-hari selain kuliah ialah bekerja sebagai kurir pada salah satu perusahaan ekspedisi di Kota Bogor.
             </p>
           </div>
-          <div class="col-sm-5">
+          <div class="col-sm-4">
             <p class="pKanan">
-              Saya sangat tertarik dengan dunia Teknologi Informasi. Saya senang mempelajari teknologi teknologi terbaru, khususnya pada bidang pemrograman web. Namun, saya juga berpengalaman bekerja sebagai teknisi komputer dan jaringan. Saat ini saya sedang mempelajari Javascript, yang merupakan bahasa pemrograman web terpopuler untuk saat ini.
+              Saya sangat tertarik dengan dunia Teknologi Informasi. 
+              Saya senang mempelajari teknologi teknologi terbaru, khususnya pada bidang pemrograman web. 
+              Namun, saya juga berpengalaman bekerja sebagai teknisi komputer dan jaringan. Saat ini saya sedang mempelajari Javascript, yang merupakan bahasa pemrograman web terpopuler untuk saat ini.
             </p>
           </div>
         </div>
@@ -212,7 +217,7 @@
           </div>
           
           <div class="col-sm-6">
-            <h3>Get In Touch</h3>
+            <h3>Send Me A Message</h3>
             <form action="proses_input_kotaksaran.php" method="POST">
               <div class="form-group">
                 <label for="nama">Nama</label>
