--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           
           <div class="col-sm-6">
             <h3>Send Me A Message</h3>
-            <form action="proses_input_kotaksaran.php" method="POST">
+            <form action="" method="POST">
               <div class="form-group">
                 <label for="nama">Nama</label>
                 <input type="text" name="nama" id="nama" class="form-control" placeholder="Masukkan Nama">
