Memperbaiki posisi tombol message pada tampilan mobile version

--- a/index.html
+++ b/index.html
@@ -244,8 +244,11 @@
                 <label for="pesan">Pesan</label>
                 <textarea name="pesan" id="pesan" class="form-control" rows="5" placeholder="Masukkan Pesan"></textarea>
               </div>
-              <button type="submit" name="simpan" class="btn btn-primary">Send Message</button>
-              <button type="reset" class="btn btn-warning">Reset</button>
+              <div class="tombol">
+                <button type="submit" name="simpan" class="btn btn-primary">Send Message</button>
+                <button type="reset" class="btn btn-warning">Reset</button>
+              </div>
+              
             </form>
           </div>
 
