--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="col-sm-4">  <!-- ofset digunakan untuk mengisi kolom sebelumnya dengan isian kosong -->
             <p class="pKiri">
               Perkenalkan, saya Ahmad Sidik Rudini. Saya seorang mahasiswa Teknik Informatika di salah satu perguruan tinggi swasta di Kota Bogor dengan fokus kompetensi rekayasa perangkat lunak (RPL).
-              Kegiatan saya sehari-hari selain kuliah ialah bekerja sebagai freelancer web programming dan juga kurir di salah satu jasa pengiriman online berlambangkan burung.
+              Kegiatan saya sehari-hari selain kuliah ialah bekerja sebagai freelancer web programming dan juga freelancer delivery courier.
             </p>
           </div>
           <div class="col-sm-4">
