--- a/index.html
+++ b/index.html
@@ -80,16 +80,20 @@
             <img src="img/me.png" class="img-responsive img-about" alt="Responsive image">
           </div>
           <div class="col-sm-4">  <!-- ofset digunakan untuk mengisi kolom sebelumnya dengan isian kosong -->
-            <p class="pKiri">
+            <!-- <p class="pKiri">
               Perkenalkan, saya Ahmad Sidik Rudini. Saya seorang mahasiswa Teknik Informatika di salah satu perguruan tinggi swasta di Kota Bogor dengan fokus kompetensi rekayasa perangkat lunak (RPL).
               Kegiatan saya sehari-hari selain kuliah ialah bekerja sebagai freelancer web programming dan juga freelancer delivery courier.
+            </p> -->
+            <p class="pKiri">
+              Perkenalkan, saya Ahmad Sidik Rudini. Saya seorang mahasiswa Teknik Informatika di salah satu perguruan tinggi swasta di Kota Bogor dengan fokus kompetensi rekayasa perangkat lunak (RPL).
+              Kegiatan saya sehari-hari selain kuliah ialah bekerja sebagai freelance web developer.
             </p>
           </div>
           <div class="col-sm-4">
             <p class="pKanan">
               Saya sangat tertarik dengan dunia Teknologi Informasi. 
               Saya senang mempelajari teknologi teknologi terbaru, khususnya pada bidang pemrograman web. 
-              Namun, saya juga berpengalaman bekerja sebagai teknisi komputer dan jaringan. Saat ini saya sedang mempelajari Javascript, yang merupakan bahasa pemrograman web terpopuler untuk saat ini.
+              Saya juga berpengalaman bekerja sebagai teknisi komputer dan jaringan. Saat ini saya sedang mempelajari Javascript, yang merupakan bahasa pemrograman web terpopuler untuk saat ini.
             </p>
           </div>
         </div>
