Memperbaiki Penulisan Nama Perguruan Tinggi

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="jumbotron text-center">
       <img src="img/profil.jpg" alt="profil pict" class="img-circle">
       <h1>Ahmad Sidik Rudini</h1>
-      <p>Student of Informatics Engineering at Ibnu Khaldun University</p>
+      <p>Student of Informatics Engineering at Ibn Khaldun University</p>
     </div>
     <!-- Akhir Jumbotron / Header -->
 
