--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div
               class="container-fluid bg-dark text-light d-md-flex flex-column align-items-center d-none"
             >
-              <h1 class="display-5 text-center">Ahmad Sidik Rudini</h1>
+              <h1 class="display-5 text-center mt-4">Ahmad Sidik Rudini</h1>
               <p class="lead my-2">Web Developer</p>
               <img
                 src="img/profil.jpg"
@@ -42,7 +42,9 @@
         <div class="col-md-9 offset-md-3 p-0">
           <!-- Header Mobile Version -->
           <header id="headerMobile">
-            <div class="d-md-none d-flex flex-row flex-wrap justify-content-center p-4">
+            <div
+              class="d-md-none d-flex flex-row flex-wrap justify-content-center p-4"
+            >
               <img
                 src="img/profil.jpg"
                 alt=""
@@ -111,7 +113,7 @@
 
           <!-- Main Content -->
           <section id="content">
-            <div class="container-fluid p-0 mb-5">
+            <div class="container-fluid p-0 mb-5 mb-md-1">
               <div id="section-title">
                 <h2 class="display-6 d-inline-block p-3 text-light">
                   About Me
@@ -121,170 +123,26 @@
               <div class="row g-0">
                 <div class="col-12 col-md-6">
                   <div class="container p-3">
-                    <h2 class="text-center">Its Me</h2>
-                    <p class="lead">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Nam maxime aperiam perferendis voluptatibus ex! Dolor
-                      dolorum molestiae atque explicabo dolorem quasi unde
-                      cumque, ipsum at quidem, magni necessitatibus blanditiis,
-                      aliquid mollitia? Quos, adipisci? Aliquid, maiores
-                      eligendi. Ipsa vel doloribus ducimus nam provident aliquid
-                      eveniet odit eum temporibus obcaecati, iste ipsam
-                      excepturi nisi sed tempora a, doloremque adipisci nesciunt
-                      officiis, natus repellat molestiae. Facilis dolore
-                      necessitatibus, perspiciatis aut consequatur quasi eum,
-                      accusantium unde dolorum sapiente repellat! Voluptas minus
-                      eaque recusandae nesciunt doloremque! Repudiandae
-                      consequuntur maiores praesentium laborum perferendis illo
-                      quis quia provident numquam nisi dolores, quisquam
-                      reprehenderit, fuga deserunt necessitatibus enim libero
-                      sequi consequatur animi voluptate accusamus laboriosam
-                      odit! Ex tenetur nemo ratione sed maxime nulla blanditiis
-                      repudiandae in nihil quisquam, reprehenderit autem odit et
-                      vitae? Ullam adipisci dolore maiores, consequuntur ut
-                      corporis, unde earum doloremque eum, id quaerat cum itaque
-                      corrupti odit! Explicabo eveniet qui cum? Saepe officia
-                      illo, cumque modi maiores voluptates error sint in libero
-                      cupiditate odio quo voluptatibus vero voluptatum inventore
-                      commodi nostrum beatae! Atque provident fugit dolorem
-                      aperiam a laudantium qui, voluptatibus est mollitia
-                      voluptate commodi officiis dolores consequuntur aut id
-                      repudiandae soluta? Voluptates minus repellendus totam
-                      ratione ipsa ducimus, necessitatibus magnam doloremque
-                      reprehenderit. Nam nemo officiis voluptas ullam placeat,
-                      cupiditate facilis recusandae repudiandae, eum, architecto
-                      rerum labore. Est facilis aperiam nam rerum minus modi
-                      nemo, mollitia id. Maxime illum minima quidem dolorum.
-                      Quos veniam animi illum doloribus nostrum quae voluptate,
-                      necessitatibus provident ex nulla debitis ratione nam
-                      perspiciatis inventore deserunt enim ducimus? Beatae eum
-                      vel quas qui incidunt obcaecati. Ut in assumenda ea,
-                      saepe, officia sint amet quia voluptate labore quam totam
-                      aut cumque, sunt sequi ad? Eum ab, voluptatem nemo,
-                      aliquam ratione ipsam, commodi dicta tenetur eaque
-                      delectus dolor! Tempore, consequuntur laboriosam mollitia
-                      atque dolore id repudiandae tenetur! Culpa reiciendis
-                      pariatur tenetur earum cupiditate optio. Laudantium
-                      placeat debitis saepe recusandae commodi dolores esse
-                      eaque accusamus sit, alias magnam omnis pariatur at
-                      impedit et eius ex quae in eum consectetur tempora! Nihil
-                      repellendus numquam rerum quasi aspernatur cupiditate
-                      facere qui molestiae veniam enim libero dolores eum,
-                      debitis suscipit voluptatibus doloribus ipsa consequuntur
-                      assumenda ratione magni tenetur provident harum illo
-                      voluptates. Ullam omnis reiciendis ut dignissimos
-                      recusandae. Minima labore cum excepturi temporibus modi
-                      voluptatibus repudiandae, sapiente tempore, aut explicabo,
-                      eligendi error dolorum distinctio molestiae quos ullam!
-                      Suscipit ad nemo nihil quia, ipsam corporis culpa error
-                      sint sequi, commodi fuga minus inventore vitae ea
-                      explicabo dolor hic illo. Laborum quisquam cumque ea, id
-                      eligendi repudiandae labore dicta ut perferendis illo
-                      eaque! Expedita commodi eveniet aspernatur praesentium
-                      dolorum pariatur, nobis error culpa illo sapiente nisi
-                      nostrum voluptatum, eligendi at alias blanditiis porro.
-                      Facere blanditiis quae neque perferendis fuga alias,
-                      adipisci aut, nemo, corrupti rerum facilis sed dicta
-                      ducimus. Magni iusto ducimus sunt excepturi doloribus
-                      deleniti harum sit debitis necessitatibus! Vero possimus
-                      facere maiores molestias, laboriosam vel exercitationem,
-                      sunt non quaerat quis veritatis architecto inventore qui
-                      aperiam ipsum. Veritatis, culpa ea aperiam animi iure
-                      quisquam ducimus vitae necessitatibus magni iste tempore
-                      voluptatibus reprehenderit modi voluptates incidunt ut
-                      nostrum. Necessitatibus?
-                    </p>
+                    <img src="img/me.png" alt="" class="img-fluid my-auto" />
                   </div>
                 </div>
                 <div class="col-12 col-md-6">
                   <div class="container p-3">
-                    <h2 class="text-center">Its Me 2</h2>
+                    <h2 class="text-center">Its Me</h2>
                     <p class="lead">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Ipsam soluta dolorum, aspernatur eos provident velit amet
-                      iste nihil. Alias voluptatum, officiis debitis ea,
-                      molestiae recusandae libero reiciendis, modi dolor
-                      voluptas exercitationem veritatis doloremque omnis fuga
-                      eos nisi quod sint expedita ipsa. Itaque laudantium, omnis
-                      dicta tempore sapiente cum minima magnam dolorem expedita
-                      natus eveniet, eius ab autem voluptatem quas
-                      exercitationem rerum? Rerum fuga beatae ducimus dicta
-                      quibusdam culpa necessitatibus at ad, repellat eaque,
-                      alias numquam quaerat consequuntur assumenda quos qui illo
-                      delectus modi deleniti, quas suscipit. Ratione vero
-                      perspiciatis odio incidunt dolor accusantium? Sed nemo quo
-                      delectus provident. Repellat accusantium, debitis corporis
-                      deserunt, laboriosam, necessitatibus quod veniam ex
-                      voluptates dolores totam sequi eos architecto! Similique
-                      doloribus illo vero obcaecati omnis illum, mollitia eos et
-                      iste, facere rem natus expedita quo quos facilis fugit!
-                      Praesentium ducimus odio exercitationem in aperiam
-                      nesciunt, vel perspiciatis suscipit maiores, aliquid natus
-                      reprehenderit, dolorum facere quam error dolores quia eos.
-                      Ab, doloremque. Laboriosam officia placeat exercitationem
-                      accusantium iste dolorum explicabo quibusdam voluptate!
-                      Ratione, laboriosam incidunt! Neque atque qui, aperiam
-                      reiciendis laboriosam, consequatur sed, asperiores itaque
-                      voluptatibus est enim sequi ipsam excepturi dolorum
-                      cupiditate maiores ducimus doloremque velit dignissimos
-                      aspernatur placeat nihil accusamus! Voluptatem veritatis
-                      labore quo, iste fuga culpa amet ipsum debitis nemo minus
-                      nesciunt, excepturi voluptate vero doloremque ut deleniti
-                      corrupti, sint aut maiores dolorum corporis laboriosam.
-                      Omnis reiciendis suscipit impedit. Expedita minima
-                      aspernatur dicta quia commodi mollitia fugit possimus
-                      alias facere nisi cumque unde placeat fuga praesentium,
-                      est sit quasi accusantium consectetur similique amet
-                      aliquam doloribus. Labore quas sint molestias, fugit
-                      temporibus iste nostrum delectus quaerat totam quod,
-                      nesciunt accusamus perferendis ex assumenda officiis nam,
-                      ad quo cupiditate perspiciatis pariatur. Assumenda enim
-                      maiores, labore temporibus nesciunt dolores provident.
-                      Iste, accusamus magnam repudiandae dignissimos ab quam est
-                      fuga cupiditate tenetur delectus? Eum rem amet accusantium
-                      iste delectus? Eveniet nulla, placeat harum autem
-                      possimus, ad pariatur rem neque quisquam quis dolorem
-                      quod. Quia animi totam ullam eveniet possimus saepe
-                      voluptatibus. Necessitatibus mollitia nemo voluptatum
-                      aspernatur optio quasi tempore libero, ipsum ratione
-                      quisquam officia ad nam est, enim non assumenda
-                      praesentium! Ullam, similique? Sint doloribus accusamus
-                      modi expedita dolorum autem similique nam! Qui aliquid
-                      earum assumenda vitae pariatur. Dignissimos, odit debitis
-                      quae illo delectus vel incidunt veritatis repellat
-                      repudiandae, ab, expedita quod quidem facilis eum. Soluta
-                      culpa ex excepturi perspiciatis aperiam nam similique
-                      laboriosam nostrum alias dicta! Sint iusto qui iure quas
-                      provident, dolores blanditiis quia, aliquam reprehenderit
-                      eveniet dolorem minus molestias? Consequuntur vero ipsam
-                      similique aspernatur impedit modi corrupti aut accusamus
-                      laborum odit quas iure, vitae sint temporibus provident.
-                      Molestiae, debitis nemo praesentium pariatur a unde
-                      impedit assumenda? Vitae veritatis omnis fugiat, laborum
-                      accusamus pariatur quas voluptatibus inventore, odio
-                      incidunt modi expedita voluptatem. Perferendis assumenda
-                      architecto non! Alias, dignissimos! Necessitatibus
-                      dignissimos est, culpa porro laborum beatae ab nam tenetur
-                      aliquam? Voluptates doloribus iure beatae sint minima,
-                      excepturi culpa sapiente. Doloremque magnam est eos, enim
-                      esse libero sapiente explicabo! Cum temporibus dolorem
-                      quaerat provident asperiores. Sapiente, porro tenetur qui
-                      quia reiciendis perspiciatis beatae ipsa eligendi cumque
-                      pariatur ab accusantium magnam illo quod, rerum
-                      praesentium sint, quo alias blanditiis vel tempora
-                      asperiores officiis odio. Aliquam consequatur vero quas
-                      eos modi repellendus, quis illum est ipsa aspernatur! Ab,
-                      voluptates? Beatae maxime porro aut qui tempora eum
-                      cupiditate illum libero illo. Accusamus, dolores sint quod
-                      numquam natus quos? Ullam minus ut facilis sequi
-                      perspiciatis quos quibusdam. Iste excepturi pariatur
-                      tenetur accusantium voluptatum, culpa distinctio
-                      asperiores quis. Perspiciatis iusto minima a asperiores
-                      magni saepe tempore ipsa numquam vitae doloremque aperiam,
-                      voluptate adipisci quos deserunt praesentium aliquam
-                      accusamus aliquid. Dignissimos harum nihil consequatur
-                      fuga, cumque omnis facilis expedita doloremque dolorum.
-                      Quidem, exercitationem!
+                      Perkenalkan, saya Ahmad Sidik Rudini. Saya seorang
+                      mahasiswa Teknik Informatika di Universitas Ibn Khaldun. Kegiatan saya sehari-hari
+                      selain kuliah ialah bekerja sebagai freelance web
+                      developer.
+                    </p>
+                    <p class="lead">
+                      Saya sangat tertarik dengan dunia Teknologi Informasi.
+                      Saya senang mempelajari teknologi teknologi terbaru,
+                      khususnya pada bidang pemrograman web. Saya juga
+                      berpengalaman bekerja sebagai teknisi komputer dan
+                      jaringan. Saat ini saya sedang mempelajari Javascript,
+                      yang merupakan bahasa pemrograman web terpopuler untuk
+                      saat ini.
                     </p>
                   </div>
                 </div>
