--- a/contact.html
+++ b/contact.html
@@ -94,12 +94,12 @@
                 </div>
                 <div class="nav-item mx-2">
                   <a href="resume.html" class="nav-link text-light">
-                    <i class="bi-file-person-fill"></i>
+                    <i class="bi-file-earmark-person-fill"></i>
                   </a>
                 </div>
                 <div class="nav-item mx-2">
                   <a href="portfolio.html" class="nav-link text-light">
-                    <i class="bi-folder2-open"></i>
+                    <i class="bi-briefcase-fill"></i>
                   </a>
                 </div>
                 <div class="nav-item mx-2">
@@ -127,28 +127,28 @@
                     </div>
                     <div class="row g-0">
                       <!-- Address -->
-                      <div class="col-2 text-center my-3">
+                      <div class="col-2 text-center my-2">
                         <i class="bi-geo-alt-fill h1"></i>
                       </div>
                       <div class="col-10 my-auto">
                         <h5>Jl. Jabaru 3 No. 70 RT 02/RW 10 Pasir Kuda, Bogor Barat, Kota Bogor (16119)</h5>
                       </div>
                       <!-- Phone -->
-                      <div class="col-2 text-center my-3">
+                      <div class="col-2 text-center my-2">
                         <i class="bi-telephone-fill h1"></i>
                       </div>
                       <div class="col-10 my-auto">
                         <h5>087711356758</h5>
                       </div>
                       <!-- Email -->
-                      <div class="col-2 text-center my-3">
+                      <div class="col-2 text-center my-2">
                         <i class="bi-envelope-fill h1"></i>
                       </div>
                       <div class="col-10 my-auto">
                         <h5>sidikrudini16@gmail.com</h5>
                       </div>
                       <!-- Freelance Available -->
-                      <div class="col-2 text-center my-3">
+                      <div class="col-2 text-center my-2">
                         <i class="bi-check-circle-fill h1"></i>
                       </div>
                       <div class="col-10 my-auto">
