--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
                 </div>
                 <div class="nav-item mx-2">
                   <a href="resume.html" class="nav-link text-light">
-                    <i class="bi-file-person-fill"></i>
+                    <i class="bi-file-earmark-person-fill"></i>
                   </a>
                 </div>
                 <div class="nav-item mx-2">
                   <a href="portfolio.html" class="nav-link text-light">
-                    <i class="bi-folder2-open"></i>
+                    <i class="bi-briefcase-fill"></i>
                   </a>
                 </div>
                 <div class="nav-item mx-2">
