Update Contact Page

--- a/contact.html
+++ b/contact.html
@@ -131,28 +131,28 @@
                         <i class="bi-geo-alt-fill h1"></i>
                       </div>
                       <div class="col-10 my-auto">
-                        <h5>Jl. Jabaru 3 No. 70 RT 02/RW 10 Pasir Kuda, Bogor Barat, Kota Bogor (16119)</h5>
+                        <h5 class="lead">Jl. Jabaru 3 No. 70 RT 02/RW 10 Pasir Kuda, Bogor Barat, Kota Bogor (16119)</h5>
                       </div>
                       <!-- Phone -->
                       <div class="col-2 text-center my-2">
                         <i class="bi-telephone-fill h1"></i>
                       </div>
                       <div class="col-10 my-auto">
-                        <h5>087711356758</h5>
+                        <h5 class="lead">087711356758</h5>
                       </div>
                       <!-- Email -->
                       <div class="col-2 text-center my-2">
                         <i class="bi-envelope-fill h1"></i>
                       </div>
                       <div class="col-10 my-auto">
-                        <h5>sidikrudini16@gmail.com</h5>
+                        <h5 class="lead">sidikrudini16@gmail.com</h5>
                       </div>
                       <!-- Freelance Available -->
                       <div class="col-2 text-center my-2">
                         <i class="bi-check-circle-fill h1"></i>
                       </div>
                       <div class="col-10 my-auto">
-                        <h5>Freelance Available</h5>
+                        <h5 class="lead">Freelance Available</h5>
                       </div>
                     </div>
                   </div>
