--- a/resume.html
+++ b/resume.html
@@ -116,42 +116,63 @@
             <div class="container-fluid p-0 mb-5 mb-md-1">
               <div id="section-title">
                 <h2 class="display-6 d-inline-block p-3 text-light">Resume</h2>
-                <p class="lead d-inline-block">Fresh Graduate</p>
+                <p class="lead d-inline-block">College Student</p>
               </div>
               <div class="row g-0 pb-1">
                 <div class="col-12 col-md-4">
                   <!-- Education -->
-                  <div class="container d-flex flex-column justify-content-around pb-3 px-2">
+                  <div
+                    class="container d-flex flex-column justify-content-around pb-3 px-2"
+                  >
                     <div class="sub-title py-1">
                       <h3 class="text-black d-inline">Education</h3>
                     </div>
                     <div class="card my-2">
                       <h4 class="text-white text-center p-1">2020 - Now</h4>
                       <div class="card-body">
-                        <h5 class="card-title text-black">Universitas Ibn Khaldun</h5>
+                        <h5 class="card-title text-black">
+                          Universitas Ibn Khaldun
+                        </h5>
                         <div class="card-subtitle text-muted">
                           Teknik Informatika
                         </div>
                         <div class="card-text mt-2">
-                          Lorem ipsum, dolor sit amet consectetur adipisicing
-                          elit. Eum earum fuga dolores esse dolorem maiores,
-                          perspiciatis ullam ea animi qui consequuntur sequi cum
-                          quae blanditiis!
+                          <ul>
+                            <li>Algorithm and Data Structure</li>
+                            <li>Basic Programming with C++</li>
+                            <li>Object Oriented Programming with Java</li>
+                            <li>Static Web Design with HTML and CSS</li>
+                            <li>
+                              Design and constructing relational database using
+                              SQL Server
+                            </li>
+                          </ul>
                         </div>
                       </div>
                     </div>
                     <div class="card my-2">
                       <h4 class="text-white text-center p-1">2014 - 2017</h4>
                       <div class="card-body">
-                        <h5 class="card-title text-black">SMK Negeri 3 Kota Bogor</h5>
+                        <h5 class="card-title text-black">
+                          SMK Negeri 3 Kota Bogor
+                        </h5>
                         <div class="card-subtitle text-muted">
                           Teknik Komputer dan Jaringan
                         </div>
                         <div class="card-text mt-2">
-                          Lorem ipsum, dolor sit amet consectetur adipisicing
-                          elit. Eum earum fuga dolores esse dolorem maiores,
-                          perspiciatis ullam ea animi qui consequuntur sequi cum
-                          quae blanditiis!
+                          <ul>
+                            <li>Assembling Computer Component</li>
+                            <li>
+                              Installing Operating System (Windows and Linux)
+                            </li>
+                            <li>Network Design</li>
+                            <li>Network Cabling</li>
+                            <li>
+                              Network Device Configuration (Mikrotik and Access
+                              Point)
+                            </li>
+                            <li>Network Construction and Maintenance</li>
+                          </ul>
                         </div>
                       </div>
                     </div>
@@ -159,7 +180,9 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <!-- Experience -->
-                  <div class="container d-flex flex-column justify-content-around pb-3 px-2">
+                  <div
+                    class="container d-flex flex-column justify-content-around pb-3 px-2"
+                  >
                     <div class="sub-title py-1">
                       <h3 class="text-black d-inline">Experience</h3>
                     </div>
@@ -167,14 +190,15 @@
                       <h4 class="text-white text-center p-1">2022 - Now</h4>
                       <div class="card-body">
                         <h5 class="card-title text-black">Web Developer</h5>
-                        <div class="card-subtitle text-muted">
-                          Freelance
-                        </div>
+                        <div class="card-subtitle text-muted">Freelance</div>
                         <div class="card-text mt-2">
-                          Lorem ipsum, dolor sit amet consectetur adipisicing
-                          elit. Eum earum fuga dolores esse dolorem maiores,
-                          perspiciatis ullam ea animi qui consequuntur sequi cum
-                          quae blanditiis!
+                          <ul>
+                            <li>
+                              Create an web application for Anteraja
+                              Baranangsiang
+                            </li>
+                            <li>Create personal page</li>
+                          </ul>
                         </div>
                       </div>
                     </div>
@@ -186,10 +210,21 @@
                           Anteraja Baranangsiang
                         </div>
                         <div class="card-text mt-2">
-                          Lorem ipsum, dolor sit amet consectetur adipisicing
-                          elit. Eum earum fuga dolores esse dolorem maiores,
-                          perspiciatis ullam ea animi qui consequuntur sequi cum
-                          quae blanditiis!
+                          <ul>
+                            <li>
+                              Delivering package to client in a safe and time
+                              manner
+                            </li>
+                            <li>Pick Up package from shipper</li>
+                            <li>
+                              Plan and follow the most efficient routes for
+                              delivering items
+                            </li>
+                            <li>
+                              Assisting with loading and unloading items from
+                              vehicles
+                            </li>
+                          </ul>
                         </div>
                       </div>
                     </div>
@@ -201,10 +236,32 @@
                           SMK Informatika Bina Generasi
                         </div>
                         <div class="card-text mt-2">
-                          Lorem ipsum, dolor sit amet consectetur adipisicing
-                          elit. Eum earum fuga dolores esse dolorem maiores,
-                          perspiciatis ullam ea animi qui consequuntur sequi cum
-                          quae blanditiis!
+                          <ul>
+                            <li>
+                              Maintaining and administering computer networks
+                              and related computing environments including
+                              systems software, applications software, hardware,
+                              and configurations
+                            </li>
+                            <li>
+                              Conferring with network users about solving
+                              existing system problems
+                            </li>
+                            <li>
+                              Designing, configuring, and testing networking
+                              software, computer hardware, and operating system
+                              software.
+                            </li>
+                            <li>
+                              Troubleshooting, diagnosing, and resolving
+                              hardware, software, and other network and system
+                              problems.
+                            </li>
+                            <li>
+                              Train the student about mikrotik configuration to
+                              help them pass the graduation test
+                            </li>
+                          </ul>
                         </div>
                       </div>
                     </div>
@@ -212,63 +269,131 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <!-- Skills -->
-                  <div class="container d-flex flex-column justify-content-around pb-3 px-2">
+                  <div
+                    class="container d-flex flex-column justify-content-around pb-3 px-2"
+                  >
                     <div class="sub-title py-1">
-                      <h3 class="text-black d-inline">
-                        Skills
-                      </h3>
+                      <h3 class="text-black d-inline">Skills</h3>
                     </div>
                     <div class="card my-2">
-                      <h4 class="text-white text-center p-1">
-                        Networking
-                      </h4>
+                      <h4 class="text-white text-center p-1">Networking</h4>
                       <div class="card-body">
                         <p class="text-black my-0">Network Design</p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated  bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar"
+                            aria-valuenow="85"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 85%"
+                          ></div>
                         </div>
                         <p class="text-black my-0">Network LAN Cabling</p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated  bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar"
+                            aria-valuenow="90"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 90%"
+                          ></div>
                         </div>
-                        <p class="text-black my-0">Access Point Configuration</p>
+                        <p class="text-black my-0">
+                          Access Point Configuration
+                        </p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated  bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar"
+                            aria-valuenow="90"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 90%"
+                          ></div>
                         </div>
                         <p class="text-black my-0">Mikrotik Configuration</p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated  bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar"
+                            aria-valuenow="85"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 85%"
+                          ></div>
                         </div>
                       </div>
                     </div>
                     <div class="card my-2">
-                      <h4 class="text-white text-center p-1">
-                        Programming
-                      </h4>
+                      <h4 class="text-white text-center p-1">Programming</h4>
                       <div class="card-body">
                         <p class="text-black my-0">HTML</p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated  bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar"
+                            aria-valuenow="95"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 95%"
+                          ></div>
                         </div>
                         <p class="text-black my-0">CSS</p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated  bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar"
+                            aria-valuenow="90"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 90%"
+                          ></div>
                         </div>
                         <p class="text-black my-0">Bootstrap 5</p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated  bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar"
+                            aria-valuenow="90"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 90%"
+                          ></div>
                         </div>
                         <p class="text-black my-0">JavaScript</p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated  bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-warning"
+                            role="progressbar"
+                            aria-valuenow="50"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 50%"
+                          ></div>
                         </div>
                         <p class="text-black my-0">PHP</p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-warning"
+                            role="progressbar"
+                            aria-valuenow="50"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 50%"
+                          ></div>
                         </div>
                         <p class="text-black my-0">RDMS (MySQL & SQL Server)</p>
                         <div class="progress mt-0 mb-2">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated  bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          <div
+                            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar"
+                            aria-valuenow="75"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="width: 75%"
+                          ></div>
                         </div>
                       </div>
                     </div>
