Update About Me

--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                 <div class="col-12 col-md-6">
                   <div class="container p-3">
                     <h2 class="text-center">Its Me</h2>
-                    <p class="lead">
+                    <!-- <p class="lead">
                       Perkenalkan, saya Ahmad Sidik Rudini. Saya seorang
                       mahasiswa Teknik Informatika di Universitas Ibn Khaldun. Kegiatan saya sehari-hari
                       selain kuliah ialah bekerja sebagai freelance web
                       developer.
-                    </p>
-                    <p class="lead">
+                    </p> -->
+                    <!-- <p class="lead">
                       Saya sangat tertarik dengan dunia Teknologi Informasi.
                       Saya senang mempelajari teknologi teknologi terbaru,
                       khususnya pada bidang pemrograman web. Saya juga
@@ -143,6 +143,20 @@
                       jaringan. Saat ini saya sedang mempelajari Javascript,
                       yang merupakan bahasa pemrograman web terpopuler untuk
                       saat ini.
+                    </p> -->
+                    <p class="lead">
+                      Let me introduce my self, my name is Ahmad Sidik Rudini. I am a student of
+                      Informatics Engineering at Ibn Khaldun University. My
+                      daily activity apart from college is working as a
+                      freelance web developer.
+                    </p>
+                    <p class="lead">
+                      I am very interested in the world of Information
+                      Technology. I enjoy learning the latest technologies,
+                      especially in the field of web programming. I also have
+                      experience working as a computer and network technician.
+                      I'm currently studying Javascript, which is the most
+                      popular web programming language at the moment.
                     </p>
                   </div>
                 </div>
