Update portfolio page and change section id on all page

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
           </nav>
 
           <!-- Main Content -->
-          <section id="content">
+          <section id="portfolio">
             <div class="container-fluid p-0 mb-5 mb-md-1">
               <div id="section-title">
                 <h2 class="display-6 d-inline-block p-3 text-light">
@@ -123,44 +123,45 @@
                 <p class="lead d-inline-block">My Best Work</p>
               </div>
               <div class="row g-0">
-                <div class="col-12 col-md-4 py-3">
+                <div class="col-12 col-md-6 p-3">
+                  <div class="card">
+                    <div class="card-body">
+                      <img
+                        src="img/template-landingpage.png"
+                        alt=""
+                        class="img-fluid mb-5"
+                      />
+                      <h1 class="text-center">Landing Page Web Template</h1>
+                      <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Explicabo quas, repellat non quasi deleniti labore dicta
+                        soluta sint nemo minima ex quibusdam! Doloremque,
+                        pariatur ratione?
+                      </p>
+                    </div>
+                    <div class="card-footer text-center">
+                      <a href="https://gitlab.com/asidikrdn/template-landingpage" target="_blank" class="btn btn-outline-secondary mx-3">Lihat Repository</a>
+                      <a href="https://template-landingpage.netlify.app/" target="_blank" class="btn btn-outline-primary mx-3">Lihat Website</a>
+                      <!-- <button class="btn btn-outline-dark">Lihat Website</button> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- <div class="row g-0">
+                <div class="col-12 col-md-6 p-3">
                   <div class="container position-relative portfolio-container">
+                    <img src="img/template-landingpage.png" alt="" class="img-fluid">
                     <div class="portfolio-box position-absolute p-3">
-                      <h5>Project 1</h5>
+                      <h5 class="text-center">Landing Page Web Template</h5>
                       <p class="lead">
                         Project 1 is Lorem ipsum dolor sit amet consectetur
                         adipisicing elit. Corporis iste nulla, laborum eum ea
                         porro non culpa odit quod commodi?
                     </div>
                   </div>
-                  <h5 class="text-center">Project 1</h5>
+                  <h5 class="text-center">Landing Page Web Template</h5>
                 </div>
-                <div class="col-12 col-md-4 py-3">
-                  <div class="container position-relative portfolio-container">
-                    <div class="portfolio-box position-absolute p-3">
-                      <h5>Project 2</h5>
-                      <p class="lead">
-                        Project 2 is Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Corporis iste nulla, laborum eum ea
-                        porro non culpa odit quod commodi?
-                      </p>
-                    </div>
-                  </div>
-                  <h5 class="text-center">Project 2</h5>
-                </div>
-                <div class="col-12 col-md-4 py-3">
-                  <div class="container position-relative portfolio-container">
-                    <div class="portfolio-box position-absolute p-3">
-                      <h5>Project 3</h5>
-                      <p class="lead">
-                        Project 3 is Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Corporis iste nulla, laborum eum ea
-                        porro non culpa odit quod commodi?
-                    </div>
-                  </div>
-                  <h5 class="text-center">Project 3</h5>
-                </div>
-              </div>
+              </div> -->
             </div>
           </section>
         </div>
