--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </nav>
 
           <!-- Main Content -->
-          <section id="content">
+          <section id="home">
             <div class="container-fluid p-0 mb-5 mb-md-1">
               <div id="section-title">
                 <h2 class="display-6 d-inline-block p-3 text-light">
